--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "framer-motion": "^10.18.0",
     "next": "14.0.4",
     "react": "^18",
+    "react-countup": "^6.5.0",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
     "react-intersection-observer": "^9.5.3",
